2009-05-11  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/6276843> REGRESSION: TextIterator generates
        an extra newline for ranges that start outside of body

        * editing/text-iterator/basic-iteration-expected.txt:
        Expect success, not failure.

2009-05-11  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Enable the new passing test, and skip two new failing tests.

        * platform/gtk/Skipped:
        * platform/gtk/fast/css/compare-content-style-expected.txt: Added.

2009-05-11  Alice Liu  <alice.liu@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=25701
        REGRESSION(r38788 & r42020): styled searchfields look wrong on Windows, affects Facebook

        * fast/forms/search-styled.html: Added.
        * platform/mac/fast/forms/search-styled-expected.txt: Added.
        * platform/win/fast/forms/search-styled-expected.txt: Added.

2009-05-11  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin Adler.

        * platform/mac-leopard/Skipped: Skip fast/images/favicon-as-image.html until we can come up
          with a better solution to its new failure.

2009-05-11  Darin Adler  <darin@apple.com>

        Reviewed by Oliver Hunt.

        Bug 25560: REGRESSION (r34821): "string value".__proto__ gets the wrong object.
        https://bugs.webkit.org/show_bug.cgi?id=25560
        rdar://problem/6861069

        * fast/js/prototypes-expected.txt: Added.
        * fast/js/prototypes.html: Added.
        * fast/js/resources/prototypes.js: Added.

2009-05-11  David Kilzer  <ddkilzer@apple.com>

        Added webarchive/test-link-rel-icon.html to gtk Skipped list

        * platform/gtk/Skipped: Added webarchive/test-link-rel-icon.html.

2009-05-11  David Kilzer  <ddkilzer@apple.com>

        Bug 23331: LayoutTests/webarchive/test-link-rel-icon.html fails in different ways on buildbots
